# queue

./: .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  create_dummy_data.py  pyproject.toml  run.py
app/: main.py
app/api/dependencies/: auth.py
app/api/routes/: auth.py  entries.py  queues.py
app/core/: config.py  security.py
app/db/: base.py
app/models/: __init__.py  queue.py  user.py
app/schemas/: queue.py  user.py
app/services/: sms.py
client/: package-lock.json  package.json
client/src/: App.tsx
client/src/api/: auth.ts  client.ts  queues.ts  shopkeeper.ts
client/src/components/: CreateQueueModal.tsx  JoinQueueModal.tsx  QueueCard.tsx  QueueManagement.tsx  QueueStatus.tsx
client/src/pages/: QueueList.tsx  ShopkeeperDashboard.tsx  ShopkeeperLogin.tsx
client/src/types/: index.ts
tests/: conftest.py  test_auth.py  test_entries.py  test_main.py  test_queues.py  test_sms_integration.py  test_sms_service.py
